zero-schema-macros/tests/ui/fail/02_array_expression.rs
use zero_schema_macros::zero;

#[zero]
struct Arithmetic<const N: usize> {
    values: [u32; N + 1],
}

fn main() {}
